--- a/index.css
+++ b/index.css
@@ -135,13 +135,12 @@ button{
   background-color: #30c9bc;
   text-shadow: 1 1 3px rgb(211, 138, 211) ;
   text-align:center;
- /* font-size: 20px;
   width: 60%;
   height: 50px;
   color: white;
   background-color: #30c9bc;
   text-shadow: 1 1 3px rgb(211, 138, 211) ;
-  border-style: solid;*/
+  border-style: solid;
    border-color: white;
 }
 input[type="file"] {
